--- a/views/public/partials/posts/cards.ejs
+++ b/views/public/partials/posts/cards.ejs
@@ -29,7 +29,8 @@
 
             <div class="card-footer bg-transparent">
                 <hr> Creato da
-                <a href="/users/<%= post.authorId %>" class="text-info">
+                <!-- <a href="/users/<%= post.authorId %>" class="text-info"> -->
+                <a class="text-info">
                     <%= post.username %>
                 </a>,
                 <%= post.dayOfPublication %>/
