--- a/views/public/partials/phrases/cards.ejs
+++ b/views/public/partials/phrases/cards.ejs
@@ -6,7 +6,7 @@
             <div class="row no-gutters">
 
                 <% if (phrase.img || phrase.quoterImg) { %>
-                    <div class="col-lg-7 col-md-6">
+                    <div class="col-lg-7 col-md-12">
                         <% if (phrase.img) { %>
                             <img src="<%= phrase.img %>" class="card-img myImg" title="<%= phrase.quoterName %> <%= phrase.quoterSurname %>" alt="<%= phrase.quoterName %> <%= phrase.quoterSurname %>">
                             <% } else { %>
@@ -17,7 +17,7 @@
 
 
                         <% if (phrase.img || phrase.quoterImg) { %>
-                            <div class="col-lg-5 col-md-6">
+                            <div class="col-lg-5 col-md-12">
                                 <% } else { %>
                                     <div class="col-md-12">
                                         <% } %>
@@ -58,7 +58,8 @@
                                             </div>
                                             <div class="card-footer bg-transparent" style="border: none;">
                                                 <hr> Creato da
-                                                <a href="/users/<%= phrase.authorId %>" class="text-info">
+                                                <!-- <a href="/users/<%= phrase.authorId %>" class="text-info"> -->
+                                                <a class="text-info">
                                                     <%= phrase.username %>
                                                 </a>,
                                                 <%= phrase.dayOfPublication %>/
@@ -73,4 +74,5 @@
 
             </div>
         </div>
+
         <% }) %>
